Move folder to track project 01

--- a/01-expanding-cards/index.html
+++ b/01-expanding-cards/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>The Beauty of Nature</h1>
+    <h1>Expanding Cards</h1>
     <div class="container">
       <div
         class="panel active"
