Customize template files on other projects

--- a/02-progress-steps/index.html
+++ b/02-progress-steps/index.html
@@ -15,18 +15,20 @@
   </head>
   <body>
     <h1>Progress Steps</h1>
-    <div class="container">
-      <div class="progress-container">
-        <div id="progress" class="progress"></div>
-        <div class="circle active">1</div>
-        <div class="circle">2</div>
-        <div class="circle">3</div>
-        <div class="circle">4</div>
-      </div>
+    <main>
+      <div class="container">
+        <div class="progress-container">
+          <div id="progress" class="progress"></div>
+          <div class="circle active">1</div>
+          <div class="circle">2</div>
+          <div class="circle">3</div>
+          <div class="circle">4</div>
+        </div>
 
-      <button id="prev" class="btn" disabled>Prev</button>
-      <button id="next" class="btn">Next</button>
-    </div>
+        <button id="prev" class="btn" disabled>Prev</button>
+        <button id="next" class="btn">Next</button>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
