--- a/01-expanding-cards/index.html
+++ b/01-expanding-cards/index.html
@@ -15,51 +15,53 @@
   </head>
   <body>
     <h1>Expanding Cards</h1>
-    <div class="container">
-      <div
-        class="panel active"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1588392382834-a891154bca4d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
-        "
-      >
-        <h3>Green Trees on Forest</h3>
-      </div>
+    <main>
+      <div class="container">
+        <div
+          class="panel active"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1588392382834-a891154bca4d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
+          "
+        >
+          <h3>Green Trees on Forest</h3>
+        </div>
 
-      <div
-        class="panel"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1565118531796-763e5082d113?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8bmF0dXJlfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
-        "
-      >
-        <h3>Grass Field and Mountain Ranges</h3>
-      </div>
+        <div
+          class="panel"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1565118531796-763e5082d113?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NXx8bmF0dXJlfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
+          "
+        >
+          <h3>Grass Field and Mountain Ranges</h3>
+        </div>
 
-      <div
-        class="panel"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTF8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
-        "
-      >
-        <h3>Seashore During Golden Hour</h3>
-      </div>
+        <div
+          class="panel"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTF8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
+          "
+        >
+          <h3>Seashore During Golden Hour</h3>
+        </div>
 
-      <div
-        class="panel"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1502082553048-f009c37129b9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTh8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
-        "
-      >
-        <h3>Green Leaf Tree Under Blue Sky</h3>
+        <div
+          class="panel"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1502082553048-f009c37129b9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTh8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
+          "
+        >
+          <h3>Green Leaf Tree Under Blue Sky</h3>
+        </div>
+        <div
+          class="panel"
+          style="
+            background-image: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTl8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
+          "
+        >
+          <h3>Brown Mountain At Nighttime</h3>
+        </div>
       </div>
-      <div
-        class="panel"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTl8fG5hdHVyZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
-        "
-      >
-        <h3>Brown Mountain At Nighttime</h3>
-      </div>
-    </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
