--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ol>
         <li><a href="./01-expanding-cards/index.html" target="_blank">Expanding Cards</a></li>
         <li><a href="./02-progress-steps/index.html" target="_blank">Progress Steps</a></li>
+        <li><a href="./03-rotating-navigation/index.html" target="_blank">Rotating Navigation</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
