--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./01-expanding-cards/index.html" target="_blank">Expanding Cards</a></li>
         <li><a href="./02-progress-steps/index.html" target="_blank">Progress Steps</a></li>
         <li><a href="./03-rotating-navigation/index.html" target="_blank">Rotating Navigation</a></li>
+        <li><a href="./04-hidden-search-widget/index.html" target="_blank">Hidden Search Widget</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
