--- a/04-hidden-search-widget/index.html
+++ b/04-hidden-search-widget/index.html
@@ -17,7 +17,7 @@
     <h1>Hidden Search Widget</h1>
     <main>
       <div class="search">
-        <input type="text" class="input" placeholder="Search..." />
+        <input type="search" class="input" placeholder="Search..." />
         <button class="btn"><i class="fas fa-search"></i></button>
       </div>
     </main>
