--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./02-progress-steps/index.html" target="_blank">Progress Steps</a></li>
         <li><a href="./03-rotating-navigation/index.html" target="_blank">Rotating Navigation</a></li>
         <li><a href="./04-hidden-search-widget/index.html" target="_blank">Hidden Search Widget</a></li>
+        <li><a href="./05-blurry-loading/index.html" target="_blank">Blurry Loading</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
