07 - Split Landing Page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./04-hidden-search-widget/index.html" target="_blank">Hidden Search Widget</a></li>
         <li><a href="./05-blurry-loading/index.html" target="_blank">Blurry Loading</a></li>
         <li><a href="./06-scroll-animation/index.html" target="_blank">Scroll Animation</a></li>
+        <li><a href="./07-split-landing-page/index.html" target="_blank">Split Landing Page</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
