--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="./05-blurry-loading/index.html" target="_blank">Blurry Loading</a></li>
         <li><a href="./06-scroll-animation/index.html" target="_blank">Scroll Animation</a></li>
         <li><a href="./07-split-landing-page/index.html" target="_blank">Split Landing Page</a></li>
+        <li><a href="./08-form-wave-animation/index.html" target="_blank">Form Wave Animation</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
