--- a/08-form-wave-animation/index.html
+++ b/08-form-wave-animation/index.html
@@ -12,7 +12,7 @@
       <h1>Please Login</h1>
       <form>
         <div class="form-control">
-          <input type="email" name="email" id="email" required>
+          <input type="text" name="email" id="email" required>
           <label for="email">Email</label>
         </div>
 
