--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="./06-scroll-animation/index.html" target="_blank">Scroll Animation</a></li>
         <li><a href="./07-split-landing-page/index.html" target="_blank">Split Landing Page</a></li>
         <li><a href="./08-form-wave-animation/index.html" target="_blank">Form Wave Animation</a></li>
+        <li><a href="./09-sound-board/index.html" target="_blank">Sound Board</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
