Move favicon to root path

--- a/01-expanding-cards/index.html
+++ b/01-expanding-cards/index.html
@@ -11,8 +11,7 @@
       crossorigin="anonymous"
     /> -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  </head>
+    <link rel="shortcut icon" href="./../favicon.ico" type="image/x-icon" />  </head>
   <body>
     <h1>Expanding Cards</h1>
     <main>
