--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./07-split-landing-page/index.html" target="_blank">Split Landing Page</a></li>
         <li><a href="./08-form-wave-animation/index.html" target="_blank">Form Wave Animation</a></li>
         <li><a href="./09-sound-board/index.html" target="_blank">Sound Board</a></li>
+        <li><a href="./10-dad-jokes/index.html" target="blank">Dad Jokes</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
