--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="./09-sound-board/index.html" target="_blank">Sound Board</a></li>
         <li><a href="./10-dad-jokes/index.html" target="blank">Dad Jokes</a></li>
         <li><a href="./11-event-keycodes/index.html" target="blank">Event KeyCodes</a></li>
+        <li><a href="./12-faq-boxes/index.html" target="blank">FAQ Boxes</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
