13 - Random Choice Picker

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="./10-dad-jokes/index.html" target="blank">Dad Jokes</a></li>
         <li><a href="./11-event-keycodes/index.html" target="blank">Event KeyCodes</a></li>
         <li><a href="./12-faq-boxes/index.html" target="blank">FAQ Boxes</a></li>
+        <li><a href="./13-random-choice-picker/index.html" target="blank">Random Choice Picker</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
