--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="./11-event-keycodes/index.html" target="blank">Event KeyCodes</a></li>
         <li><a href="./12-faq-boxes/index.html" target="blank">FAQ Boxes</a></li>
         <li><a href="./13-random-choice-picker/index.html" target="blank">Random Choice Picker</a></li>
+        <li><a href="./14-animated-navigation/index.html" target="blank">Animated Navigation</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
