--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="./12-faq-boxes/index.html" target="blank">FAQ Boxes</a></li>
         <li><a href="./13-random-choice-picker/index.html" target="blank">Random Choice Picker</a></li>
         <li><a href="./14-animated-navigation/index.html" target="blank">Animated Navigation</a></li>
+        <li><a href="./15-incrementing-counter/index.html" target="blank">Incrementing Counter</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
