Apply Fix for 08 Form Wave Animation

--- a/08-form-wave-animation/index.html
+++ b/08-form-wave-animation/index.html
@@ -12,12 +12,12 @@
       <h1>Please Login</h1>
       <form>
         <div class="form-control">
-          <input type="text" name="email" id="email" required>
+          <input type="email" placeholder=" " name="email" id="email" required>
           <label for="email">Email</label>
         </div>
 
         <div class="form-control">
-          <input type="password" name="password" id="password" required>
+          <input type="password" placeholder=" " name="password" id="password" required>
           <label for="password">Password</label>
         </div>
 
