WIP : 17 - Movie App

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="./14-animated-navigation/index.html" target="blank">Animated Navigation</a></li>
         <li><a href="./15-incrementing-counter/index.html" target="blank">Incrementing Counter</a></li>
         <li><a href="./16-drink-water/index.html" target="blank">Drink Water</a></li>
+        <li><a href="./17-movie-app/index.html" target="blank">Movie App</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
