17 - Completed Movie App

--- a/17-movie-app/index.html
+++ b/17-movie-app/index.html
@@ -14,58 +14,7 @@
       </form>
     </header>
 
-    <main id="main">
-      <div class="movie">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/en/8/81/ShawshankRedemptionMoviePoster.jpg"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>The Shawshank Redemption</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          aliquid repellat nulla excepturi voluptate accusamus quidem unde non,
-          architecto nisi!
-        </div>
-      </div>
-
-      <div class="movie">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/en/8/81/ShawshankRedemptionMoviePoster.jpg"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>The Shawshank Redemption</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          aliquid repellat nulla excepturi voluptate accusamus quidem unde non,
-          architecto nisi!
-        </div>
-      </div>
-
-      <div class="movie">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/en/8/81/ShawshankRedemptionMoviePoster.jpg"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>The Shawshank Redemption</h3>
-          <span class="red">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          aliquid repellat nulla excepturi voluptate accusamus quidem unde non,
-          architecto nisi!
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
