--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="./15-incrementing-counter/index.html" target="blank">Incrementing Counter</a></li>
         <li><a href="./16-drink-water/index.html" target="blank">Drink Water</a></li>
         <li><a href="./17-movie-app/index.html" target="blank">Movie App</a></li>
+        <li><a href="./18-background-slider/index.html" target="blank">Background Slider</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
