--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="./17-movie-app/index.html" target="blank">Movie App</a></li>
         <li><a href="./18-background-slider/index.html" target="blank">Background Slider</a></li>
         <li><a href="./19-theme-clock/index.html" target="_blank">Theme Clock</a></li>
+        <li><a href="./20-button-ripple-effect/index.html" target="_blank">Button Ripple Effect</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
