--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="./19-theme-clock/index.html" target="_blank">Theme Clock</a></li>
         <li><a href="./20-button-ripple-effect/index.html" target="_blank">Button Ripple Effect</a></li>
         <li><a href="./21-drag-n-drop/index.html" target="_blank">Drag N Drop</a></li>
+        <li><a href="./22-drawing-app/index.html" target="_blank">Drawing App</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
