--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="./21-drag-n-drop/index.html" target="_blank">Drag N Drop</a></li>
         <li><a href="./22-drawing-app/index.html" target="_blank">Drawing App</a></li>
         <li><a href="./23-kinetic-css-loader/index.html" target="_blank">Kinetic CSS Loader</a></li>
+        <li><a href="./24-content-placeholder/index.html" target="_blank">Content Placeholder</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
