--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="./22-drawing-app/index.html" target="_blank">Drawing App</a></li>
         <li><a href="./23-kinetic-css-loader/index.html" target="_blank">Kinetic CSS Loader</a></li>
         <li><a href="./24-content-placeholder/index.html" target="_blank">Content Placeholder</a></li>
+        <li><a href="./25-sticky-navbar/index.html" target="_blank">Sticky Navbar</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
