--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="./23-kinetic-css-loader/index.html" target="_blank">Kinetic CSS Loader</a></li>
         <li><a href="./24-content-placeholder/index.html" target="_blank">Content Placeholder</a></li>
         <li><a href="./25-sticky-navbar/index.html" target="_blank">Sticky Navbar</a></li>
+        <li><a href="./26-double-vertical-slider/index.html" target="_blank">Double Vertical Slider</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
