--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="./24-content-placeholder/index.html" target="_blank">Content Placeholder</a></li>
         <li><a href="./25-sticky-navbar/index.html" target="_blank">Sticky Navbar</a></li>
         <li><a href="./26-double-vertical-slider/index.html" target="_blank">Double Vertical Slider</a></li>
+        <li><a href="./27-toast-notification/index.html" target="_blank">Toast Notification</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
