--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li><a href="./25-sticky-navbar/index.html" target="_blank">Sticky Navbar</a></li>
         <li><a href="./26-double-vertical-slider/index.html" target="_blank">Double Vertical Slider</a></li>
         <li><a href="./27-toast-notification/index.html" target="_blank">Toast Notification</a></li>
+        <li><a href="./28-github-profiles/index.html" target="_blank">Github Profiles</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
