29 - Double Click Heart

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="./26-double-vertical-slider/index.html" target="_blank">Double Vertical Slider</a></li>
         <li><a href="./27-toast-notification/index.html" target="_blank">Toast Notification</a></li>
         <li><a href="./28-github-profiles/index.html" target="_blank">Github Profiles</a></li>
+        <li><a href="./29-double-heart-click/index.html" target="_blank">Double Hearth Click</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
