--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="./27-toast-notification/index.html" target="_blank">Toast Notification</a></li>
         <li><a href="./28-github-profiles/index.html" target="_blank">Github Profiles</a></li>
         <li><a href="./29-double-heart-click/index.html" target="_blank">Double Hearth Click</a></li>
+        <li><a href="./30-auto-text-effect/index.html" target="_blank">Auto Text Effect</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
