--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li><a href="./28-github-profiles/index.html" target="_blank">Github Profiles</a></li>
         <li><a href="./29-double-heart-click/index.html" target="_blank">Double Hearth Click</a></li>
         <li><a href="./30-auto-text-effect/index.html" target="_blank">Auto Text Effect</a></li>
+        <li><a href="./31-password-generator/index.html" target="_blank">Password Generator</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
