32 - Good Cheap Fast Toggle Switches

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a href="./29-double-heart-click/index.html" target="_blank">Double Hearth Click</a></li>
         <li><a href="./30-auto-text-effect/index.html" target="_blank">Auto Text Effect</a></li>
         <li><a href="./31-password-generator/index.html" target="_blank">Password Generator</a></li>
+        <li><a href="./32-good-cheap-fast-checkboxes/index.html" target="_blank">Good, Cheap, Fast</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
