--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="./30-auto-text-effect/index.html" target="_blank">Auto Text Effect</a></li>
         <li><a href="./31-password-generator/index.html" target="_blank">Password Generator</a></li>
         <li><a href="./32-good-cheap-fast-checkboxes/index.html" target="_blank">Good, Cheap, Fast</a></li>
+        <li><a href="./33-notes-app/index.html" target="_blank">Notes App</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
