--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="./31-password-generator/index.html" target="_blank">Password Generator</a></li>
         <li><a href="./32-good-cheap-fast-checkboxes/index.html" target="_blank">Good, Cheap, Fast</a></li>
         <li><a href="./33-notes-app/index.html" target="_blank">Notes App</a></li>
+        <li><a href="./34-animated-countdown/index.html" target="_blank">Animated Countdown</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
