--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <li><a href="./32-good-cheap-fast-checkboxes/index.html" target="_blank">Good, Cheap, Fast</a></li>
         <li><a href="./33-notes-app/index.html" target="_blank">Notes App</a></li>
         <li><a href="./34-animated-countdown/index.html" target="_blank">Animated Countdown</a></li>
+        <li><a href="./35-image-carousel/index.html" target="_blank">Image Carousel</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
