--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <li><a href="./33-notes-app/index.html" target="_blank">Notes App</a></li>
         <li><a href="./34-animated-countdown/index.html" target="_blank">Animated Countdown</a></li>
         <li><a href="./35-image-carousel/index.html" target="_blank">Image Carousel</a></li>
-        <li><a href="./36-hoverboard/" target="_blank">Hoverboard</a></li>
+        <li><a href="./36-hoverboard/index.html" target="_blank">Hoverboard</a></li>
+        <li><a href="./37-pokedex/index.html" target="_blank">Pokedex</a></li>
       </ol>
     </main>
     <script src="script.js"></script>
