--- a/index.html
+++ b/index.html
@@ -16,47 +16,12 @@
   <body>
     <h1>50 Projects in 50 Days</h1>
     <main>
-      <p>These are my mini-projects as a daily challenge for 50 days. This aims to enhance my front-end development skills.</p>
-      <ol>
-        <li><a href="./01-expanding-cards/index.html" target="_blank">Expanding Cards</a></li>
-        <li><a href="./02-progress-steps/index.html" target="_blank">Progress Steps</a></li>
-        <li><a href="./03-rotating-navigation/index.html" target="_blank">Rotating Navigation</a></li>
-        <li><a href="./04-hidden-search-widget/index.html" target="_blank">Hidden Search Widget</a></li>
-        <li><a href="./05-blurry-loading/index.html" target="_blank">Blurry Loading</a></li>
-        <li><a href="./06-scroll-animation/index.html" target="_blank">Scroll Animation</a></li>
-        <li><a href="./07-split-landing-page/index.html" target="_blank">Split Landing Page</a></li>
-        <li><a href="./08-form-wave-animation/index.html" target="_blank">Form Wave Animation</a></li>
-        <li><a href="./09-sound-board/index.html" target="_blank">Sound Board</a></li>
-        <li><a href="./10-dad-jokes/index.html" target="blank">Dad Jokes</a></li>
-        <li><a href="./11-event-keycodes/index.html" target="blank">Event KeyCodes</a></li>
-        <li><a href="./12-faq-boxes/index.html" target="blank">FAQ Boxes</a></li>
-        <li><a href="./13-random-choice-picker/index.html" target="blank">Random Choice Picker</a></li>
-        <li><a href="./14-animated-navigation/index.html" target="blank">Animated Navigation</a></li>
-        <li><a href="./15-incrementing-counter/index.html" target="blank">Incrementing Counter</a></li>
-        <li><a href="./16-drink-water/index.html" target="blank">Drink Water</a></li>
-        <li><a href="./17-movie-app/index.html" target="blank">Movie App</a></li>
-        <li><a href="./18-background-slider/index.html" target="blank">Background Slider</a></li>
-        <li><a href="./19-theme-clock/index.html" target="_blank">Theme Clock</a></li>
-        <li><a href="./20-button-ripple-effect/index.html" target="_blank">Button Ripple Effect</a></li>
-        <li><a href="./21-drag-n-drop/index.html" target="_blank">Drag N Drop</a></li>
-        <li><a href="./22-drawing-app/index.html" target="_blank">Drawing App</a></li>
-        <li><a href="./23-kinetic-css-loader/index.html" target="_blank">Kinetic CSS Loader</a></li>
-        <li><a href="./24-content-placeholder/index.html" target="_blank">Content Placeholder</a></li>
-        <li><a href="./25-sticky-navbar/index.html" target="_blank">Sticky Navbar</a></li>
-        <li><a href="./26-double-vertical-slider/index.html" target="_blank">Double Vertical Slider</a></li>
-        <li><a href="./27-toast-notification/index.html" target="_blank">Toast Notification</a></li>
-        <li><a href="./28-github-profiles/index.html" target="_blank">Github Profiles</a></li>
-        <li><a href="./29-double-heart-click/index.html" target="_blank">Double Hearth Click</a></li>
-        <li><a href="./30-auto-text-effect/index.html" target="_blank">Auto Text Effect</a></li>
-        <li><a href="./31-password-generator/index.html" target="_blank">Password Generator</a></li>
-        <li><a href="./32-good-cheap-fast-checkboxes/index.html" target="_blank">Good, Cheap, Fast</a></li>
-        <li><a href="./33-notes-app/index.html" target="_blank">Notes App</a></li>
-        <li><a href="./34-animated-countdown/index.html" target="_blank">Animated Countdown</a></li>
-        <li><a href="./35-image-carousel/index.html" target="_blank">Image Carousel</a></li>
-        <li><a href="./36-hoverboard/index.html" target="_blank">Hoverboard</a></li>
-        <li><a href="./37-pokedex/index.html" target="_blank">Pokedex</a></li>
-      </ol>
+      <p class="introduction">These are my mini-projects as a daily challenge for 50 days. This aims to enhance my front-end development skills.</p>
+
+      <div id="projects-container">
+      </div>
     </main>
+    <script src="projects.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
