UUpdate home page introduction

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
   <body>
     <h1>50 Projects in 50 Days</h1>
     <main>
-      <p class="introduction">These are my mini-projects as a daily challenge for 50 days. This aims to enhance my front-end development skills.</p>
+      <p class="introduction"
+        >These are my mini-projects as a daily challenge for 50 days guided by
+        the course created by
+        <a href="https://twitter.com/traversymedia">@traversymedia</a> and
+        <a href="https://twitter.com/florinpop1705">@florinpop1705</a>. I took
+        this challenge to improve my front-end development skills.</p
+      >
 
-      <div id="projects-container">
-      </div>
+      <div id="projects-container"> </div>
     </main>
     <script src="projects.js"></script>
     <script src="script.js"></script>
